public/main.css
body {
  background-image: url(/images/background.jpg);
  background-position: center center;
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
  font-family: 'Marck Script', cursive;
}

#logo {
  height: 9vh;
  width: 10vw;
}

.flow-text {
  font-size: 0.9em !important;
}

.slider {
  height: 400px !important;
}

.slides {
  height: 700px !important;
}

